add openapi spec matching game telemetry models v1.4.1
